# AquaSpice

OnToology/aq-ontology/cs-ontology/cs-population/CS1-IParcDOW/aq-dow-bohlen.rdf/diagrams/ar2dtool-class/: aq-dow-bohlen.rdf.png.dot  aq-dow-bohlen.rdf.png.graphml
OnToology/aq-ontology/cs-ontology/cs-population/CS1-IParcDOW/aq-dow-bohlen.rdf/documentation/doc/: ontology.jsonld  ontology.nt  ontology.owl  (+1 more)
OnToology/aq-ontology/cs-ontology/cs-population/CS1-IParcDOW/aq-iparkdow.rdf/documentation/: aq-iparkdow.rdf.widoco.conf
OnToology/aq-ontology/cs-ontology/cs-population/CS2-Solvay/aq-solvay.rdf/context/: context.jsonld
OnToology/aq-ontology/cs-ontology/cs-population/CS3_Antewerp/aq-antwerp-harbour.rdf/context/: context.jsonld
OnToology/aq-ontology/cs-ontology/cs-population/CS3_Antewerp/aq-antwerp-harbour_2.ttl/documentation/: aq-antwerp-harbour_2.ttl.widoco.conf
OnToology/aq-ontology/cs-ontology/cs-population/CS5-Agricola/aq-agricola.rdf/context/: context.jsonld
aq-ontology/: main.py  pyproject.toml
aq-ontology/cs-ontology/cs-population/CS1-IParcDOW/: aq-dow-bohlen.rdf  aq-dow-bohlen.ttl  aq-iparkdow.rdf  aq-iparkdow.ttl
aq-ontology/cs-ontology/cs-population/CS2-Solvay/: aq-solvay.rdf  aq-solvay.ttl
aq-ontology/cs-ontology/cs-population/CS3_Antewerp/: aq-BASF.rdf  aq-BASF.ttl  aq-HarbourPort.ttl  aq-antwerp-harbour.rdf  aq-antwerp-harbour_2.ttl
aq-ontology/cs-ontology/cs-population/CS5-Agricola/: aq-agricola.rdf  aq-agricola.ttl
aq-ontology/cs-ontology/cs-population/CS6-Tupras/: aq-Tupras.rdf  aq-tupras.ttl
aq-ontology/ontologies/: wsis.owl
(+100 files in other folders)
