[tool.poetry]
name = "aq-ontology"
version = "0.1.0"
description = ""
authors = ["Aitor Corchero Rodríguez <aitorcorchero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Owlready2 = "^0.39"
uri = "^2.0.1"
rdflib = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
